Opened 10 years ago

Closed 10 years ago

#11727 closed bug (fixed)

[Debugger] The teams listview is not navigable

Reported by: Janus Owned by: anevilyak
Priority: normal Milestone: R1
Component: Applications/Debugger Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description


Attachments (1)

0001-Fix-11727-Teams-listview-is-navigable.patch (920 bytes ) - added by Janus 10 years ago.

Download all attachments as: .zip

Change History (6)

comment:1 by Janus, 10 years ago

patch: 01

comment:2 by Janus, 10 years ago

The teams listview is not navigable with the keyboard

Last edited 10 years ago by Janus (previous) (diff)

comment:3 by anevilyak, 10 years ago

Thanks for the patch! Will apply it after work tonight if no one gets around to doing so sooner.

comment:4 by Janus, 10 years ago

Thank you for the good work

comment:5 by anevilyak, 10 years ago

Resolution: fixed
Status: newclosed

Applied in hrev48645.

Note: See TracTickets for help on using tickets.