Fix #11727 - Teams listview is navigable

Signed-off-by: Rene Gollent <rene@gollent.com>